testing/Travis/testcases/prototype/shouldSucceed/Issue1026.adl
CONTEXT Issue1026 IN ENGLISH

RELATION r[A*B]
RELATION s[A*B]

PATTERN SameName
RULE ifRthenS : r |- s 
PURPOSE RULE ifRthenS IN DUTCH 
{+Dit is de tekst voor de regel ifRthenS. Deze staat in het eerste pattern met de naam Try46.+}
ENDPATTERN

PATTERN SameName
RULE ifSthenR : s |- r
PURPOSE RULE ifSthenR IN DUTCH 
{+Dit is de tekst voor de regel ifSthenR. Deze staat in het tweede pattern met de naam Try46.+}
ENDPATTERN

ENDCONTEXT
